--- a/BuddhaBowls/BuddhaBowls.csproj
+++ b/BuddhaBowls/BuddhaBowls.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\RecipeItem.cs" />
     <Compile Include="Models\Vendor.cs" />
+    <Compile Include="Models\VendorInventoryItem.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="UserControls\AddInvStep1.xaml.cs">
       <DependentUpon>AddInvStep1.xaml</DependentUpon>
