Fixed bugs Dan notified me about

--- a/BuddhaBowls/Properties/Settings.settings
+++ b/BuddhaBowls/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="DBLocation" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaB\Data</Value>
+      <Value Profile="(Default)">C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaB\Dataadf</Value>
     </Setting>
     <Setting Name="InventoryOrder" Type="System.Collections.Generic.List&lt;System.String&gt;" Scope="User">
       <Value Profile="(Default)" />
