--- a/BuddhaBowls.Test/app.config
+++ b/BuddhaBowls.Test/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <BuddhaBowls.Test.Properties.Settings>
             <setting name="DBLocation" serializeAs="String">
-                <value>C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaBowls\BuddhaBowls.Test\Data</value>
+                <value>C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaBowls\BuddhaBowls.Test\TestData</value>
             </setting>
         </BuddhaBowls.Test.Properties.Settings>
     </userSettings>
