--- a/BuddhaBowls.Test/Properties/Settings.settings
+++ b/BuddhaBowls.Test/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="DBLocation" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaBowls\BuddhaBowls.Test\Data</Value>
+      <Value Profile="(Default)">C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaBowls\BuddhaBowls.Test\TestData</Value>
     </Setting>
   </Settings>
 </SettingsFile>
