--- a/BuddhaBowls/BuddhaBowls.csproj
+++ b/BuddhaBowls/BuddhaBowls.csproj
@@ -142,6 +142,9 @@
     <Compile Include="UserControls\ChangeableTabControl.xaml.cs">
       <DependentUpon>ChangeableTabControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\ChangeRecOrderContol.xaml.cs">
+      <DependentUpon>ChangeRecOrderContol.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\CompareInventoriesControl.xaml.cs">
       <DependentUpon>CompareInventoriesControl.xaml</DependentUpon>
     </Compile>
@@ -248,6 +251,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\ChangeableTabControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\ChangeRecOrderContol.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
