--- a/BuddhaBowls/packages.config
+++ b/BuddhaBowls/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.4.0-ALPHA030" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.6.0" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
+  <package id="Splat" version="1.6.2" targetFramework="net452" />
+  <package id="squirrel.windows" version="1.6.0" targetFramework="net452" />
   <package id="WPFTextBoxAutoComplete" version="1.0.2" targetFramework="net452" />
 </packages>
