--- a/BuddhaBowls.Test/packages.config
+++ b/BuddhaBowls.Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.8.0" targetFramework="net46" />
+  <package id="MahApps.Metro" version="1.6.0-alpha002" targetFramework="net46" />
+  <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.9.0" targetFramework="net46" />
 </packages>
