Creates square interface to list transactions

--- a/BuddhaBowls/App.config
+++ b/BuddhaBowls/App.config
@@ -13,6 +13,15 @@
             <setting name="DBLocation" serializeAs="String">
                 <value>C:\Users\Developer\Documents\Visual Studio 2015\Projects\BuddhaBowls\asdf</value>
             </setting>
+            <setting name="SquareId" serializeAs="String">
+                <value>sq0idp-7qQkCGQQ6wxwsB__K37ATA</value>
+            </setting>
+            <setting name="SquareToken" serializeAs="String">
+                <value>sq0atp-kdATMXFL8eaKeN7ShEZgXA</value>
+            </setting>
+            <setting name="SquareLocationId" serializeAs="String">
+                <value>69VJ030ANYAGV</value>
+            </setting>
         </BuddhaBowls.Properties.Settings>
     </userSettings>
 </configuration>
