--- a/BuddhaBowls/Properties/Settings.settings
+++ b/BuddhaBowls/Properties/Settings.settings
@@ -11,5 +11,14 @@
     <Setting Name="CategoryOrder" Type="System.Collections.Generic.List&lt;System.String&gt;" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="SquareId" Type="System.String" Scope="User">
+      <Value Profile="(Default)">sq0idp-7qQkCGQQ6wxwsB__K37ATA</Value>
+    </Setting>
+    <Setting Name="SquareToken" Type="System.String" Scope="User">
+      <Value Profile="(Default)">sq0atp-kdATMXFL8eaKeN7ShEZgXA</Value>
+    </Setting>
+    <Setting Name="SquareLocationId" Type="System.String" Scope="User">
+      <Value Profile="(Default)">69VJ030ANYAGV</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
