--- a/BuddhaBowls/packages.config
+++ b/BuddhaBowls/packages.config
@@ -4,7 +4,11 @@
   <package id="MahApps.Metro" version="1.4.0-ALPHA030" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.6.0" targetFramework="net452" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.1.0" targetFramework="net452" />
   <package id="Splat" version="1.6.2" targetFramework="net452" />
+  <package id="Square.Connect" version="2.1.0.117" targetFramework="net452" />
   <package id="squirrel.windows" version="1.6.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="net452" />
   <package id="WPFTextBoxAutoComplete" version="1.0.2" targetFramework="net452" />
 </packages>
